--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,72 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+    margin: 0;
+    padding: 0;
+    background: lightgray;
+}
+
+i {
+    font-size: 200px;
+    margin-top: 200px;
+    margin-left: 25px;
+    margin-right: 25px;
+    color: rgb(22, 22, 22);
+}
+
+#root {
+    text-align: center;
+}
+
+button {
+    font-size: 1em;
+    display: block;
+    margin: 20px auto;
+    width: 25%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background: rgb(79, 77, 90);
+    color: white;
+}
+
+button:hover {
+    font-size: 1.1em;
+}
+
+.rolling {
+    animation-name: wobble;
+    animation-duration: 1s;
+}
+
+@keyframes wobble {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+
+    15% {
+        transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+    }
+
+    30% {
+        transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+    }
+
+    45% {
+        transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+    }
+
+    60% {
+        transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+    }
+
+    75% {
+        transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+    }
+
+    to {
+        transform: translate3d(0, 0, 0);
+    }
 }
